@@ -9,7 +9,7 @@
   <parent>
     <groupId>com.gruelbox</groupId>
     <artifactId>orko-parent</artifactId>
-    <version>0.14.3</version>
+    <version>0.15.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -33,7 +33,7 @@
       <groupId>org.tuckey</groupId>
       <artifactId>urlrewritefilter</artifactId>
     </dependency>
-    
+
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
@@ -66,38 +66,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-shade-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>shade</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>shade</goal>
-                </goals>
-                <configuration>
-                  <createDependencyReducedPom>true</createDependencyReducedPom>
-                  <filters>
-                    <filter>
-                      <artifact>*:*</artifact>
-                      <excludes>
-                        <exclude>META-INF/*.SF</exclude>
-                        <exclude>META-INF/*.DSA</exclude>
-                        <exclude>META-INF/*.RSA</exclude>
-                      </excludes>
-                    </filter>
-                  </filters>
-                  <transformers>
-                    <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
-                    <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                      <mainClass>com.gruelbox.orko.app.monolith.MonolithApplication</mainClass>
-                    </transformer>
-                    <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
-                      <addHeader>false</addHeader>
-                    </transformer>
-                  </transformers>
-                </configuration>
-              </execution>
-            </executions>
           </plugin>
         </plugins>
       </build>
@@ -109,28 +77,9 @@
           <plugin>
             <groupId>com.google.cloud.tools</groupId>
             <artifactId>jib-maven-plugin</artifactId>
-            <version>1.6.1</version>
             <configuration>
-              <to>
-                <image>orko:latest</image>
-              </to>
+              <skip>false</skip>
               <container>
-                <jvmFlags>
-                  <jvmFlag>-XX:+UnlockExperimentalVMOptions</jvmFlag>
-                  <jvmFlag>-XX:+UseCGroupMemoryLimitForHeap</jvmFlag>
-                  <jvmFlag>-Dsun.net.inetaddr.ttl=60</jvmFlag>
-                  <jvmFlag>-Dio.netty.leakDetectionLevel=advanced</jvmFlag>
-                  <jvmFlag>-Dmorf.mysql.noadmin=true</jvmFlag>
-                  <jvmFlag>-Ddw.server.connector.port=8080</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.rmi.port=9090</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote=true</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.port=9090</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.ssl=false</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.authenticate=false</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.local.only=false</jvmFlag>
-                  <jvmFlag>-Djava.rmi.server.hostname=localhost</jvmFlag>
-                </jvmFlags>
-                <mainClass>com.gruelbox.orko.app.monolith.MonolithApplication</mainClass>
                 <args>
                   <arg>server</arg>
                   <arg>docker-config.yml</arg>
@@ -140,68 +89,6 @@
                 </ports>
               </container>
             </configuration>
-            <executions>
-              <execution>
-                <phase>package</phase>
-                <goals>
-                  <goal>buildTar</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>dockerhub</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>com.google.cloud.tools</groupId>
-            <artifactId>jib-maven-plugin</artifactId>
-            <version>1.6.1</version>
-            <configuration>
-              <to>
-                <image>docker.io/gruelbox/orko:${docker.tag}</image>
-                <auth>
-                  <username>${env.DOCKERHUB_USER}</username>
-                  <password>${env.DOCKERHUB_PASSWORD}</password>
-                </auth>
-              </to>
-              <container>
-                <jvmFlags>
-                  <jvmFlag>-XX:+UnlockExperimentalVMOptions</jvmFlag>
-                  <jvmFlag>-XX:+UseCGroupMemoryLimitForHeap</jvmFlag>
-                  <jvmFlag>-Dsun.net.inetaddr.ttl=60</jvmFlag>
-                  <jvmFlag>-Dio.netty.leakDetectionLevel=advanced</jvmFlag>
-                  <jvmFlag>-Dmorf.mysql.noadmin=true</jvmFlag>
-                  <jvmFlag>-Ddw.server.connector.port=8080</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.rmi.port=9090</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote=true</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.port=9090</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.ssl=false</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.authenticate=false</jvmFlag>
-                  <jvmFlag>-Dcom.sun.management.jmxremote.local.only=false</jvmFlag>
-                  <jvmFlag>-Djava.rmi.server.hostname=localhost</jvmFlag>
-                </jvmFlags>
-                <mainClass>com.gruelbox.orko.app.monolith.MonolithApplication</mainClass>
-                <args>
-                  <arg>server</arg>
-                  <arg>docker-config.yml</arg>
-                </args>
-                <ports>
-                  <port>8080</port>
-                </ports>
-              </container>
-            </configuration>
-            <executions>
-              <execution>
-                <phase>package</phase>
-                <goals>
-                  <goal>build</goal>
-                </goals>
-              </execution>
-            </executions>
           </plugin>
         </plugins>
       </build>
@@ -214,10 +101,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>com.github.spotbugs</groupId>
-        <artifactId>spotbugs-maven-plugin</artifactId>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
